Collect the repository and service lists into unmodifiable lists